# pidgeon

./: .gitignore  .markdown-link-check.json  .prettierignore  .prettierrc.yml  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  README.md  cspell.yaml  docker-compose.yml  flake.nix  justfile  pyproject.toml  rustfmt.toml
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  docs.yml
.helix/: languages.toml
assets/: .gitignore  config.toml  ozds.sh
assets/measurements/: .gitignore  abb-B2x-measurements.csv.dvc  schneider-iEM3xxx-measurements.csv.dvc
assets/ozds/: .gitignore  ozds.sql.dvc
assets/ozds/App_Data/: tenants.json
assets/pidgeon/: config.toml  pidgeons.json
assets/secrets/: 8RHOU6R8p732mNDytEL9minBqdo2ax77.yaml  HHeJNW843H35uc0gdh6sbJUftnLNklyj.yaml  K2iADfcQngJoZvssNxiZDvbErFq0w3jn.yaml  PayZMy3Y0JIHJzwfwMRiH45NkXjAH7GT.yaml  TulPr4fOqSE82Ro6jyRSlEv92NFiN3fo.yaml  grFvxoW5xQs69gfQfCSTIND8NT1L70tI.yaml
docs/: index.html
docs/en/: book.toml
docs/en/src/: SUMMARY.md  architecture.md  introduction.md
docs/hr/: book.toml
docs/hr/src/: SUMMARY.md  architecture.md  introduction.md  uvod.md
scripts/: format  host.nu  image  image.sh  inject  inject.sh  isready.nu  lint  mksecrets  mksecrets.sh  static.nu
scripts/flake/: check.nix  dev.nix  dockerCompose.nix  docs.nix  e2e.nu  format.nix  gns3.nix  host.nu  lint.nix  lsp.nix  pidgeonCli.nix  pidgeonCliDocker.nix  pidgeonProbe.nix  pidgeons.nix  python.nix  raspberryPi4.nix  raspberryPi4.nu  rust.nix  scripts.nix  secrets.nix  tools.nix  vcs.nix
scripts/flake/raspberryPi4/: default.nix  pidgeon.nix  service.nix  visualization.nix
src/cli/: .env  Cargo.toml  README.md  config.toml  pidgeon.toml
src/cli/.sqlx/: query-051dc955c5bbb44dfedff9a5d37ab350c1e46cf392aa937306974e4727938e77.json  query-14cb721726c10396438e4cdab15df29c65d2616b1c6a13d6c9218bde47a946c6.json  query-2a0503fc077822d593088e42691d1bb95dc6dcf03283897e49d5de364b066781.json  query-2d959cf721fac42f3c2aea2d1c129a73e3c49d39118bd04bd049edfac025347a.json  query-2fe0e43f44a4728d56d784837d5cda62460541bb47a9a997663ed482e42583e2.json  query-48997ff2d4149110fffe65284cb9fb0119bedaa1d7a1632f1634f04dd493594c.json  query-4b036ceee4aa8beb35e16f419ace08df6d08b83688d6b7982fbe514b269adb67.json  query-61d02a1b2b933b458374e8b0d711ab908375265d25f725dba44c069ab682952e.json  query-77ee3d6dd98a3aa853b763646cae370fb8aab6af83fe369b2712d5579f3f246f.json  query-78f8ab701eae19eeab1a34f2c7b90b93e2d206aead515fa73d5e6346cb099ebf.json  query-7f6d3c8d2108aef4481c8dab3f86963cf283a878b3bb26ed6b67a6602e246a25.json  query-84d863595b982d5b8e18047d3ac1734ea8b9d5119dc30d3a58b02257d5fe51e6.json  query-86314b305a4126332044fecd6fe851d9f76f267ab9a5f126f5255eab1236fb1d.json  query-8c1b52b6d869499610cc1a92729df708f189074db94e3975dbca8489ef0370f4.json  query-9f39074e53500b81715b6f5901f8fb70ab64110b0d6c09fdd39ce0bd3815767c.json  query-9f8c1fee206c7178367a484a8a68dfa186445b83f8b5889b329406ecfa59de5d.json  query-b2fd06cdcb43b046d6bfa5924cd46390926f596cbf6109be18ba4ba14a87d7f7.json  query-d9ab027baedf360fc7d84abe6f88c480a1697d02afd9482505e3e9d2f618153e.json  query-ddb21b70c3266423c1b5c0c98c20e0cf93ed08ce65b5061ea97b26d34b22b67a.json  query-e156c1a4b100a5d2199e7ff33a8d30af968e9eff5c4cad016027e6c9af8b8cd7.json  query-e4db4b2b3f02f9e71fb6f9fe589d836e29bfe6bc4bd568a6047ae39298497666.json  query-e59a0de23b60e66afaa774261a9196ffc2a5c7eb56b68c641b251b1d07beecd0.json
src/cli/migrations/: 20230827064411_initial.sql  20241015073032_rtu.sql
src/cli/src/: cloud.rs  config.rs  db.rs  main.rs  modbus.rs  network.rs  runtime.rs  scan.rs  services.rs  sql.rs
src/cli/src/config/: args.rs  env.rs  file.rs  mod.rs
src/cli/src/modbus/: batch.rs  client.rs  conn.rs  connection.rs  gateway.rs  mod.rs  register.rs  registry.rs  server.rs  span.rs  worker.rs
src/cli/src/process/: daily.rs  discover.rs  discovery.rs  health.rs  measure.rs  measurement.rs  mod.rs  nightly.rs  ping.rs  poll.rs  push.rs  time.rs  update.rs
src/cli/src/service/: cloud.rs  db.rs  hardware.rs  i2c.rs  mod.rs  net.rs  network.rs  serial.rs
src/cli/src/service/modbus/: batch.rs  client.rs  connection.rs  encoding.rs  mod.rs  record.rs  register.rs  service.rs  span.rs  time.rs  worker.rs
src/flake/: check.nix  cli-docker.nix  cli.nix  configuration.nix  dev.nix  docker.nix  docs.nix  formatter.nix  gns3-docker-base.nix  hmModule.nix  module.nix  nixosConfiguration.nix  nixosModule.nix  overlay.nix  package.nix  pidgeonCli.nix  pidgeonProbe.nix  pidgeonProbeDocker.nix  probe-docker.nix  probe.nix  python.nix  raspberryPi4.nix  rust.nix  service.nix
src/flake/apps/: cli.nix  default.nix  probe.nix
src/flake/checks/: clippy.nix  cspell.nix  just.nix  markdown-lint-check.nix  markdownlint.nix  nixpkgs-fmt.nix  prettier.nix  pyright.nix  ruff.nix  shellcheck.nix
src/flake/configurations/: static.json
src/flake/formatters/: cargo.nix  clippy.nix  just.nix  nixpkgs-fmt.nix  prettier.nix  shfmt.nix  yapf.nix
src/flake/lib/: app.nix  cargo.nix  check.nix  deploy.nix  devShell.nix  gns3.nix  host.nix  nixosConfiguration.nix  nixosModule.nix  overlay.nix  package.nix  poetry.nix
src/flake/module/: database.nix  hardware.nix  network.nix  pidgeon-service.nix  service.nix  system.nix  user.nix  vpn.nix
src/flake/modules/: config.toml  database.nix  default.nix  hardware.nix  nebula.nix  network.nix  pidgeon.nix  postgresql.nix  secrets.nix  service.nix  system.nix  user.nix  visualization.nix  vpn.nix
src/flake/overlay/: raspberry-pi.nix
src/flake/overlays/: node.nix
src/flake/package/: cli.nix  pidgeon-cli-docker.nix  pidgeon-cli.nix  pidgeon-probe-docker.nix  probe-docker.nix
src/flake/pidgeonLib/: default.nix  poetry.nix
src/probe/: README.md  fixup.py  pyproject.toml
src/probe/probe/: args.py  client.py  device.py  func.py  main.py  pull.py  request.py  server.py
src/probe/src/: loader.py
src/probe/src/pidgeon_probe/: loader.py
src/system/: README.md  configuration.nix  flake.nix  home.nix  secrets.sops.enc.yaml
test/e2e/: project.gns3
(+115 files in other folders)
