[tool.poetry]
name = "pidgeon"
version = "0.1.0"
description = "Raspberry Pi message broker"
authors = ["Hrvoje Jurić <hrvoje@altibiz.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"
ruff = "^0.0.286"
python-lsp-ruff = "^1.5.1"
ruff-lsp = "^0.0.38"
rope = "^1.9.0"
pylsp-rope = "^0.1.11"
mypy = "^1.5.1"
pylsp-mypy = "^0.6.7"
python-lsp-server = { version = "^1.7.4", extras = ["rope", "mypy"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 80
continuation_indent_width = 2
indent_width = 2

[tool.ruff]
line-length = 80

[tool.pyright]
typeCheckingMode = "strict"
