[tool.poetry]
name = "pidgeon"
version = "0.1.0"
description = "Raspberry Pi message broker"
authors = ["Hrvoje Jurić <hrvoje@altibiz.com>"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pyright = "^1.1.334"
ruff = "^0.1.4"

[tool.yapf]
based_on_style = "pep8"
column_limit = 80
continuation_indent_width = 2
indent_width = 2

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venvName = ".venv"
