[project]
name = "pidgeon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pidgeon-probe"]

[dependency-groups]
dev = ["yapf >=0.40.2", "pyright >=1.1.334", "ruff >=0.1.4"]

[tool.uv.sources]
pidgeon-probe = { workspace = true }

[tool.uv.workspace]
members = ["src/probe"]

[project.scripts]
pidgeon-probe = "pidgeon_probe:main"

[tool.yapf]
based_on_style = "pep8"
column_limit = 80
continuation_indent_width = 2
indent_width = 2

[tool.pyright]
typeCheckingMode = "strict"
