[package]
name = "pidgeon-cli"
version = "0.1.0"
description = "Pidgeon CLI"
authors = ["Hrvoje Jurić <hrvoje@altibiz.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive"] }
cron = "0.12.1"
directories = "5.0.1"
dotenv = "0.15.0"
either = { version = "1.13.0", features = ["serde"] }
env_logger = "0.10.2"
flume = "0.11.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-time = "3.0.0"
ipnet = { version = "2.10.1", features = ["serde"] }
itertools = "0.11.0"
log = { version = "0.4.22", features = ["serde"] }
netdev = { version = "0.31.0", features = ["serde"] }
regex = "1.11.0"
reqwest = { version = "0.11.27", features = [
  "json",
  "rustls",
  "rustls-tls",
  "gzip",
] }
rust_decimal = { version = "1.36.0", features = ["serde", "serde-arbitrary-precision"] }
rust_decimal_macros = "1.36.0"
rustls = "0.21.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
serialport = { version = "4.5.1", features = ["serde"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "ipnetwork",
  "json",
] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }
tokio-modbus = { version = "0.9.0", features = ["tcp", "rtu"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.12", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
