[package]
name = "pidgeon-cli"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
cron = "0.12.1"
derivative = "2.2.0"
directories = "5.0.1"
dotenv = "0.15.0"
either = { version = "1.13.0", features = ["serde"] }
env_logger = "0.10.2"
flume = "0.11.1"
futures = "0.3.31"
futures-core = "0.3.31"
futures-time = "3.0.0"
ipnet = { version = "2.10.1", features = ["serde"] }
itertools = "0.11.0"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["serde"] }
netdev = { version = "0.31.0", features = ["serde"] }
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.11.27", features = [
  "json",
  "rustls",
  "rustls-tls",
  "gzip",
] }
rust_decimal = { version = "1.36.0", features = [
  "serde",
  "serde-arbitrary-precision",
] }
rust_decimal_macros = "1.36.0"
rustls = "0.21.12"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serialport = { version = "4.6.1", features = ["serde"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "ipnetwork",
  "json",
] }
thiserror = "1.0.69"
tokio = { version = "1.42.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }
tokio-modbus = { version = "0.9.0", features = ["tcp", "rtu"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.13", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
